fixed primary section heading align issue

--- a/components/ui-components/section/section.module.scss
+++ b/components/ui-components/section/section.module.scss
@@ -30,9 +30,9 @@
 .asideLeft {
   flex: 1 1 25%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-start;
   @include respond(mobile-largest) {
     flex: 1 1 10%;
   }
@@ -44,10 +44,6 @@
 
 .asideRight {
   flex: 1 1 25%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
   @include respond(mobile-largest) {
     flex: 1 1 10%;
   }
